# SPOP

./: .gitignore  SPOP.cabal
src/: Etc.hs  Interface.hs  Logic.hs  Main.hs  Menus.hs  Task.hs
